Clear JS code and CSS

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="avgrund-contents">
       <header>
-	<h1>MINET</h1><!--<sup>{info}</sup></h1>-->
+	<h1>MINET</h1>
       </header>
       <div class="pr center wrapper">
 	<div class="cf pr chat animate">
@@ -32,10 +32,9 @@
 		</div>
 		<ul></ul>
 	      </div>
-	      <div class="chat-rooms">
+	      <div class="chat-channels">
 		<div class="cf title">
-		  <div class="fl">Channel</div>
-		  <!--<div class="fr title-button">+</div>-->
+		  <div class="fl">Channels</div>
 		</div>
 		<ul class="pr"></ul>
 	      </div>
@@ -57,13 +56,7 @@
       <div class="title">Enter a nickname</div>
       <div class="content">Please select a nickname, up to 15 characters</div>
       <div class="input"><input type="text" maxlength="15" placeholder="nickname..." /></div>
-      <div class="big-button-green small begin">&mdash; Begin &mdash;</div>
-    </aside>
-    <aside id="addroom-popup" class="popup animate avgrund-popup">
-      <div class="title">Enter a room name</div>
-      <div class="content">Room name up to 10 characters</div>
-      <div class="input"><input type="text" maxlength="10" placeholder="room name..." /></div>
-      <div class="big-button-green small create">Create &rarr;</div>
+      <div class="big-button-green small begin">&mdash; Login &mdash;</div>
     </aside>
     <div class="avgrund-cover"></div>
     <script type="text/javascript" src="/scripts/jquery-ui.min.js"></script>
